# diagramme2

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/diagramme-core/dxf/: Cargo.toml
src-tauri/diagramme-core/dxf/assets/: acad_shell_template.dxf
src-tauri/diagramme-core/dxf/src/: audit.rs  debug_split.rs  document.rs  lib.rs  primitives.rs  sanitize.rs  scene_emit.rs  template.rs
src-tauri/diagramme-core/dxf/tests/: scene_emit_tests.rs  writer_tests.rs
src-tauri/diagramme-core/export-model/: Cargo.toml
src-tauri/diagramme-core/export-model/src/: lib.rs
src-tauri/diagramme-core/geometry/: Cargo.toml
src-tauri/diagramme-core/geometry/src/: av_plate_layout.rs  device_v2_layout.rs  grouping_zone_geometry.rs  lib.rs  node_bounds.rs  paper_scale.rs  paper_scale_tests.rs  patch_bundle_layout.rs  port_geometry.rs  port_geometry_tests.rs  schematic_layout.rs  symbol_layout.rs  text_measure.rs  text_measure_tests.rs  types.rs  units.rs  wiretag_layout.rs
src-tauri/diagramme-core/reports/: Cargo.toml
src-tauri/diagramme-core/reports/src/: lib.rs
src-tauri/diagramme-core/scene/: Cargo.toml
src-tauri/diagramme-core/scene/src/: breakline.rs  build.rs  bundle_brackets.rs  cad_transform.rs  edge_connect.rs  lib.rs  patch.rs  scene.rs  text.rs  wires.rs
src-tauri/diagramme-core/schema/: Cargo.toml
src-tauri/diagramme-core/schema/src/: lib.rs  (+5 more)
src-tauri/diagramme-core/wires/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: close_gate.rs  commands.rs  debug_channel.rs  lib.rs  native_menu.rs  state.rs
src-tauri/tests/: commands_test.rs  export_test.rs  fixture_compatibility_test.rs
(+174 files in other folders)
