[package]
name = "diagramme"
version = "0.1.0"
description = "Diagramme v2"
authors = ["dhhuston"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
diagramme-schema = { path = "diagramme-core/schema" }
diagramme-geometry = { path = "diagramme-core/geometry" }
diagramme-wires = { path = "diagramme-core/wires" }
diagramme-scene = { path = "diagramme-core/scene" }
diagramme-dxf = { path = "diagramme-core/dxf" }
diagramme-export-model = { path = "diagramme-core/export-model" }
diagramme-reports = { path = "diagramme-core/reports" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.3", features = ["std"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
  "NSGeometry",
  "objc2-core-foundation",
] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
  "NSApplication",
  "NSMenu",
  "NSMenuItem",
  "NSResponder",
  "NSView",
  "NSScreen",
] }
